--- a/styles.css
+++ b/styles.css
@@ -20,25 +20,27 @@ body, main {
 }
 
 main {
-  background-color: #85948c;
+  background-color: rgb(175, 157, 117);
 }
 
 #characterSheet {
   display: flex; 
   justify-content: center; 
   align-items: center; 
+  max-width: 1250px;
+  max-height: 1250px;
 }
 
 .concCircle {
-  border-radius: 50%;
   display: flex; 
   justify-content: center; 
   align-items: center; 
+  border-radius: 50%;
 }
 
 #outerCircle {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
 }
 
 #bonusCircle {
@@ -47,13 +49,14 @@ main {
 }
 
 #abilityCircle {
-  width: 40%;
-  height: 40%;
+  width: 65%;
+  height: 65%;
 }
 
 #nameCircle {
-  width: 30%;
-  height: 30%;
+  width: 60%;
+  height: 60%;
+  flex-direction: column;
 }
 
 #characterNamePrompter {
@@ -64,13 +67,21 @@ main {
   display: flex; 
   justify-content: center; 
   align-items: center; 
+  flex-direction: column;
 }
 
 #characterNameInputter {
   display: flex; 
   justify-content: center; 
   align-items: center; 
+  margin-bottom: 10px;
+  text-align: center;
 }
+
+#characterNameInputter::placeholder {
+  color: rgb(175, 157, 117)
+}
+
 
 
 /* ### ### ### ### ### ### ### ### ### ### ### */
